--- a/Proyecto/Views/ClientesPage.xaml
+++ b/Proyecto/Views/ClientesPage.xaml
@@ -9,11 +9,11 @@
             <!-- Rosado muy pálido tipo blush -->
             <GradientStop Color="#FFF1F3" Offset="0.0"/>
             <!-- Salmón claro pastel -->
-            <GradientStop Color="#FFD6D0" Offset="0.3"/>
+            <GradientStop Color="#e5b5c4" Offset="0.3"/>
             <!-- Rosado suave tipo piel -->
-            <GradientStop Color="LightPink" Offset="0.6"/>
+            <GradientStop Color="RosyBrown" Offset="0.6"/>
             <!-- Coral pálido / rosado cálido -->
-            <GradientStop Color="Plum" Offset="1.0"/>
+            <GradientStop Color="RosyBrown" Offset="1.0"/>
         </LinearGradientBrush>
     </ContentPage.Background>
 
@@ -41,6 +41,19 @@
                 Text=""
                 
             />
+            <Entry
+                x:Name="IDClienteEntry"
+                Placeholder="Cedula del cliente"
+                PlaceholderColor="#b5b5b5"
+                FontFamily="Montserrat"
+                FontSize="17"
+                HorizontalTextAlignment="Center"
+                BackgroundColor="#f9f2f5"
+                TextColor="Black"
+                WidthRequest="500"
+                
+                />
+            
             <!-- Nombre del Cliente -->
             <Entry
                 x:Name="NombreClienteEntry"
@@ -126,7 +139,7 @@
                         HeightRequest="40"
                         Padding="10"
                         CornerRadius="15"
-                        BackgroundColor="#a37281"
+                        BackgroundColor="#996374"
                         Margin="0,0,0,0"
                         VerticalOptions="Center">
                         
