--- a/Proyecto/Views/VentasPage.xaml
+++ b/Proyecto/Views/VentasPage.xaml
@@ -6,10 +6,14 @@
 
     <ContentPage.Background>
         <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+            <!-- Rosado muy pálido tipo blush -->
             <GradientStop Color="#FFF1F3" Offset="0.0"/>
-            <GradientStop Color="#FFD6D0" Offset="0.3"/>
-            <GradientStop Color="LightPink" Offset="0.6"/>
-            <GradientStop Color="Plum" Offset="1.0"/>
+            <!-- Salmón claro pastel -->
+            <GradientStop Color="#e5b5c4" Offset="0.3"/>
+            <!-- Rosado suave tipo piel -->
+            <GradientStop Color="RosyBrown" Offset="0.6"/>
+            <!-- Coral pálido / rosado cálido -->
+            <GradientStop Color="RosyBrown" Offset="1.0"/>
         </LinearGradientBrush>
     </ContentPage.Background>
 
@@ -29,24 +33,47 @@
                     FontAttributes="Italic"
                     TextColor="Black"/>
             </Border>
-
-            <!-- Picker para Cliente -->
+            
             <Picker x:Name="ClientePicker"
-                    Title="Seleccionar Cliente"
+        Title="Seleccionar Cliente"
+        FontFamily="Montserrat"
+        FontSize="17"
+        TextColor="Black"
+        BackgroundColor="#f9f2f5"
+        HorizontalTextAlignment="Center"
+        WidthRequest="500" 
+        TitleColor="Black"
+        ItemDisplayBinding="{Binding IDCliente}"
+        SelectedIndexChanged="OnClientePickerSelectedIndexChanged"/>
+
+            <!-- Datos del cliente seleccionado -->
+            <VerticalStackLayout Spacing="5" Padding="0,10,0,0">
+                <Label x:Name="NombreClienteLabel"
+                   Text="Nombre: "
+                   FontFamily="Montserrat"
+                       HorizontalOptions="Center"
+                   FontSize="15"
+                   TextColor="Black" />
+            </VerticalStackLayout>
+
+
+            <!-- Método de Pago -->
+            <Picker x:Name="MetodoPagoPicker"
+                    Title="Seleccionar Método"
                     FontFamily="Montserrat"
                     FontSize="17"
                     TextColor="Black"
                     BackgroundColor="#f9f2f5"
                     HorizontalTextAlignment="Center"
-                    WidthRequest="500" 
                     TitleColor="Black"
-                    ItemDisplayBinding="{Binding Nombre}"/>
+                    WidthRequest="500" />
 
             <StackLayout>
                 <!-- Título para Total de la Venta -->
                 <Label Text="Total de la venta"
                      FontFamily="Montserrat"
                      FontSize="17"
+                     FontAttributes="Bold"
                      TextColor="Black"
                        HorizontalTextAlignment="Center"
                      Margin="0,10,0,5"/>
@@ -63,21 +90,9 @@
                     BackgroundColor="#f9f2f5"
                     WidthRequest="500"/>
             </StackLayout>
-            
-            
-            <!-- Método de Pago -->
-            <Picker x:Name="MetodoPagoPicker"
-                    Title="Seleccionar Método"
-                    FontFamily="Montserrat"
-                    FontSize="17"
-                    TextColor="Black"
-                    BackgroundColor="#f9f2f5"
-                    HorizontalTextAlignment="Center"
-                    TitleColor="Black"
-                    WidthRequest="500" />
 
             <!-- Estado Completado -->
-            <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="20">
                 <Label Text="Completado"
                        FontFamily="Montserrat"
                        FontSize="18"
@@ -99,7 +114,7 @@
                     <Shadow Brush="Black" Radius="12" Opacity="0.4"/>
                 </Border.Shadow>
                 <Button x:Name="AgregarVentaBtn"
-                        Text="Agregar Venta"
+                        Text="Realizar Venta"
                         Clicked="OnAgregarVentaClicked"
                         FontFamily="Montserrat"
                         FontAttributes="Bold"
@@ -109,7 +124,7 @@
                         HeightRequest="40"
                         Padding="10"
                         CornerRadius="15"
-                        BackgroundColor="#a37281"
+                        BackgroundColor="#996374"
                         VerticalOptions="Center">
                     <Button.Triggers>
                         <Trigger TargetType="Button" Property="IsPressed" Value="True">
