--- a/Proyecto/Views/VentasPage.xaml
+++ b/Proyecto/Views/VentasPage.xaml
@@ -83,6 +83,8 @@
                 <Entry x:Name="TotalVentaEntry"
                     Placeholder=""
                     Keyboard="Numeric"
+                    TextColor="Black"
+                        HorizontalTextAlignment="Center"
                     PlaceholderColor="#b5b5b5"
                     FontFamily="Montserrat"
                     FontSize="17"
